# cashflow-analyzer-supabase

./: .env.example  .gitignore  README.md  docker-compose.yml  test.txt
services/data-manager/: requirements.txt
services/document-processor/: Dockerfile  README.md  config.py  main.py  requirements.txt
services/orchestrator/: .env.example  README.md  pyproject.toml  requirements.txt
services/orchestrator/app/: main.py
services/orchestrator/app/api/: README.md  dependencies.py  routes.py
services/orchestrator/app/clients/: __init__.py  document_processor_client.py  transaction_analyzer_client.py
services/orchestrator/app/core/: __init__.py  config.py  logger.py
services/orchestrator/app/models/: README.md  __init__.py  requests.py  responses.py  schemas.py
services/orchestrator/app/orchestration/: __init__.py  pipeline.py  zenml_config.py
services/orchestrator/app/services/: README.md  __init__.py  document_client.py  supabase_client.py  transaction_client.py  workflow_service.py
services/orchestrator/config/: config.yaml  zenml_config.yaml
services/orchestrator/migrations/: 01_create_enums.sql  02_create_workflows.sql  03_create_transactions.sql  README.md  init.sql
services/orchestrator/tests/: README.md  conftest.py  test_config.yaml
services/orchestrator/tests/services/: test_document_client.py  test_supabase_client.py  test_transaction_client.py  test_workflow_service.py
services/storage/sql/: init.sql
services/transaction-analyzer/: Dockerfile  README.md  main.py  requirements.txt  start.sh
supabase/migrations/: 00000000000000_init.sql
(+43 files in other folders)
