[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = ""
authors = ["yousmaaza <dataforsciences@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
zenml = "^0.47.0"
pydantic = ">=1.9.0,<1.11"
httpx = "^0.27.0"
loguru = "^0.7.2"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
supabase = "^2.3.4"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
